--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,11 +7,15 @@
     <string name="company">Company</string>
     <string name="followers">Followers</string>
     <string name="followings">Following</string>
-<!--    <string name="repository">%s Repository</string>-->
+    <!--    <string name="repository">%s Repository</string>-->
     <string name="repository">%d\n repository</string>
     <string name="following">%d\n following</string>
     <string name="follower">%d\n follower</string>
     <string name="number">1234</string>
     <string name="search_hint">Masukkan kata</string>
     <string name="htmlurl">html url</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tab_1">Follower</string>
+    <string name="tab_2">Following</string>
 </resources>
