--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
 
     <string name="splash">Github User by Abdullah</string>
     <string name="desc_logo">logo</string>
+    <string name="favorite">Favorite USer</string>
 </resources>
